--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,21 +3,18 @@ name: Publish Artifacts Workflow
 run-name: 'Publish Artifacts -- ${{github.event.workflow_run.head_branch}}'
 
 on:
-  push:
-  pull_request:
-#    workflow_run:
-    #workflows:
-      #- Build Workflow
-    #types:
-      #- completed
+  workflow_run:
+    workflows:
+      - Build Workflow
+    types:
+      - completed
 
 
 jobs:
   publish-artifacts:
     name: Publish Artifacts
     runs-on: self-hosted
-    #if: github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'ikmdev'
-    if: github.repository_owner == 'ikmdev'
+    if: github.event.workflow_run.conclusion == 'success' && github.repository_owner == 'ikmdev'
 
     env:
       ARTIFACT_REPOSITORY_ID: "maven-snapshots"
@@ -42,8 +39,7 @@ jobs:
           ref: ${{github.event.workflow_run.head_branch}}
 
       - name: Checkout ikmdev Code Repository
-        #if:   github.event.workflow_run.event != 'pull_request' && github.event.workflow.name == 'Build Workflow'
-        if: github.event.workflow_run.event != 'pull_request'
+        if:   github.event.workflow_run.event != 'pull_request' && github.event.workflow.name == 'Build Workflow'
         uses: actions/checkout@v4
 
       - name: Deploy To Nexus
