--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
     <name>Integrated Knowledge Management</name>
     <url>https://www.ikm.dev</url>
   </organization>
+  <scm>
+    <url>http://www.github.com/ikmdev/build-parent</>
+  </scm>
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
