--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <url>https://www.ikm.dev</url>
   </organization>
   <scm>
-    <url>http://www.github.com/ikmdev/build-parent</>
+    <url>http://www.github.com/ikmdev/puli_test</>
   </scm>
   <licenses>
     <license>
