--- a/puli/pom.xml
+++ b/puli/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>dev.ikm.puli</groupId>
 		<artifactId>puli_test_parent</artifactId>
-		<version>0.3.0-ikm-r1</version>
+		<version>0.3.0-ikm-r6</version>
 	</parent>
 
 	<artifactId>puli_test_module</artifactId>
@@ -43,4 +43,14 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 	</dependencies>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>maven-releases</id>
+			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 </project>
