updated maven-deploy-plugin pom

--- a/puli/pom.xml
+++ b/puli/pom.xml
@@ -43,7 +43,7 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 	</dependencies>
-	<distributionManagement>
+	<!--<distributionManagement>
 		<snapshotRepository>
 			<id>ossrh</id>
 			<url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
@@ -52,5 +52,5 @@
 			<id>maven-releases</id>
 			<url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
-	</distributionManagement>
+	</distributionManagement>-->
 </project>
