--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
       ARTIFACT_REPOSITORY_ID: "maven-snapshots"
       REPOSITORY_NAME: ${{github.repository}}
       BRANCH: "master"
-      MAVEN_SETTINGS: '/home/ec2-user/maven/.m2/settings.xml'
+      MAVEN_SETTING: '/home/ec2-user/maven/.m2/settings.xml'
 
     steps:
       - name: Checkout Forked Code Repository
@@ -36,13 +36,13 @@ jobs:
 
       - name: Deploy To Nexus
         run: |
-          mvn deploy \
-             --batch-mode \
-             -e \
-             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
-             -PcodeQuality \
-             -DskipTests \
-             -DskipITs \
-             -s ${{env.MAVEN_SETTINGS}} \
-             -DrepositoryId=${{env.ARTIFACT_REPOSITORY_ID}} \
-             -Dgpg.passphrase=${{secrets.GPG_PASSPHRASE}}             
+          mvn -X deploy \
+           --batch-mode \
+           -e \
+           -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+           -PcodeQuality \
+           -DskipTests \
+           -DskipITs \
+           -s ${{env.MAVEN_SETTING}} \
+           -DrepositoryId='${{env.ARTIFACT_REPOSITORY_ID}}' \
+           -Dgpg.passphrase=${{secrets.GPG_PASSPHRASE}}             
