--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ env:
   BRANCH_NAME: ${{github.ref_name}}
   TRUNK_BRANCH_NAME: master
   RELEASE_MESSAGE: ${{github.event.inputs.release_message}}
-  MAVEN_SETTINGS: '/home/ec2-user/maven/.m2/settings.xml'
+  MAVEN_SETTING: '/home/ec2-user/maven/.m2/settings.xml'
 
 jobs:
   release:
@@ -175,7 +175,7 @@ jobs:
       - name: Maven Build
         run: |
           mvn clean install \
-            -s ${{env.MAVEN_SETTINGS}} \
+            -s ${{env.MAVEN_SETTING}} \
             --batch-mode \
             -e \
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
@@ -183,26 +183,26 @@ jobs:
 
       - name: Deploy To Nexus
         run: |
-          mvn deploy \
-                --batch-mode \
-                -e \
-                -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
-                -DskipTests \
-                -DskipITs \
-                -s ${{env.MAVEN_SETTINGS}} \
-                -DrepositoryId='maven-releases' \
-                -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
+          mvn -X deploy \
+            --batch-mode \
+            -e \
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+            -DskipTests \
+            -DskipITs \
+            -s ${{env.MAVEN_SETTING}} \
+            -DrepositoryId='maven-releases' \
+            -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
 
 
       - name: Publish To OSSRH (Maven Central Staging)
         run: |
           mvn deploy \
-              --batch-mode \
-              -e \
-              -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
-              -DskipTests \
-              -DskipITs \
-              -s ${{env.MAVEN_SETTINGS}} \
-              -DrepositoryId='maven-releases' \
-              -DrepositoryIdOSSRH='true' \
-              -PstageOSSRH -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
+            --batch-mode \
+            -e \
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+            -DskipTests \
+            -DskipITs \
+            -s ${{env.MAVEN_SETTINGS}} \
+            -DrepositoryId='maven-releases' \
+            -DrepositoryIdOSSRH='true' \
+            -PstageOSSRH -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
