--- a/pom.xml
+++ b/pom.xml
@@ -330,10 +330,12 @@
         <snapshotRepository>
           <id>ossrh</id>
           <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+          <layout>maven</layout>
         </snapshotRepository>
         <repository>
           <id>maven-releases</id>
           <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+          <layout>maven</layout>
         </repository>
       </distributionManagement>
       <build>
@@ -369,10 +371,12 @@
         <snapshotRepository>
           <id>ossrh</id>
           <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+          <layout>maven</layout>
         </snapshotRepository>
         <repository>
           <id>maven-releases</id>
           <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+          <layout>maven</layout>
         </repository>
       </distributionManagement>
       <build>
@@ -423,10 +427,12 @@
         <snapshotRepository>
           <id>ossrh</id>
           <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+          <layout>maven</layout>
         </snapshotRepository>
         <repository>
           <id>maven-releases</id>
           <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+          <layout>maven</layout>
         </repository>
       </distributionManagement>
       <build>
