--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -181,6 +181,18 @@ jobs:
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
             -PcodeQuality
 
+#      - name: Settings.xml Config
+#        uses: s4u/maven-settings-action@v2.3.0
+#        with:
+#          servers: |
+#            [{
+#              "id": "${{vars.NEXUS_SNAPSHOT_REPO_ID}}",
+#              "username": "${{ vars.NEXUS_USERNAME }}",
+#              "password": "${{ secrets.NEXUS_PASSWORD}}"
+#            }]
+#
+#          output_file: .m2/settings.xml
+
       - name: Deploy To Nexus
         run: |
           mvn -X deploy \
@@ -190,19 +202,20 @@ jobs:
             -DskipTests \
             -DskipITs \
             -s ${{env.MAVEN_SETTING}} \
+            -DaltDeploymentRepository=releaseRepository::default::https://${{ vars.NEXUS_USERNAME }}:${{ secrets.NEXUS_PASSWORD}}@nexus.build.tinkarbuild.com/repository/maven-releases/
             -DrepositoryId='maven-releases' \
             -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
 
 
       - name: Publish To OSSRH (Maven Central Staging)
         run: |
-          mvn deploy \
+          mvn -X deploy \
             --batch-mode \
             -e \
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
             -DskipTests \
             -DskipITs \
-            -s ${{env.MAVEN_SETTINGS}} \
+            -s ${{env.MAVEN_SETTING}} \
             -DrepositoryId='maven-releases' \
             -DrepositoryIdOSSRH='true' \
             -PstageOSSRH -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
