--- a/pom.xml
+++ b/pom.xml
@@ -330,12 +330,12 @@
         <snapshotRepository>
           <id>ossrh</id>
           <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-          <layout>maven</layout>
+          <name>maven</name>
         </snapshotRepository>
         <repository>
           <id>maven-releases</id>
           <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-          <layout>maven</layout>
+          <name>maven</name>
         </repository>
       </distributionManagement>
       <build>
@@ -371,12 +371,12 @@
         <snapshotRepository>
           <id>ossrh</id>
           <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-          <layout>maven</layout>
+          <name>maven</name>
         </snapshotRepository>
         <repository>
           <id>maven-releases</id>
           <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-          <layout>maven</layout>
+          <name>maven</name>
         </repository>
       </distributionManagement>
       <build>
@@ -427,12 +427,12 @@
         <snapshotRepository>
           <id>ossrh</id>
           <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-          <layout>maven</layout>
+          <name>maven</name>
         </snapshotRepository>
         <repository>
           <id>maven-releases</id>
           <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-          <layout>maven</layout>
+          <name>maven</name>
         </repository>
       </distributionManagement>
       <build>
