--- a/puli/pom.xml
+++ b/puli/pom.xml
@@ -28,10 +28,10 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-		</dependency>
+		</dependency>-->
 		<!-- dev.ikm JPMS dependencies-->
 		<dependency>
 			<groupId>dev.ikm.jpms</groupId>
