--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
       ARTIFACT_REPOSITORY_ID: "maven-snapshots"
       REPOSITORY_NAME: ${{github.repository}}
       BRANCH: "master"
-      MAVEN_SETTING: '/home/ec2-user/maven/.m2/settings.xml'
+      MAVEN_FILE: '/home/ec2-user/maven/.m2/settings.xml'
 
     steps:
       - name: Checkout Forked Code Repository
@@ -36,13 +36,14 @@ jobs:
 
       - name: Deploy To Nexus
         run: |
-          mvn -X deploy \
+          mvn deploy \
            --batch-mode \
            -e \
            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
            -PcodeQuality \
            -DskipTests \
-           -DskipITs \
-           -s ${{env.MAVEN_SETTING}} \
+           -Dmaven.main.skip \
+           -Dmaven.test.skip \
+           -s ${{env.MAVEN_FILE}} \
            -DrepositoryId='${{env.ARTIFACT_REPOSITORY_ID}}' \
            -Dgpg.passphrase=${{secrets.GPG_PASSPHRASE}}             
