--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ env:
   BRANCH_NAME: ${{github.ref_name}}
   TRUNK_BRANCH_NAME: master
   RELEASE_MESSAGE: ${{github.event.inputs.release_message}}
-  MAVEN_SETTING: '/home/ec2-user/maven/.m2/settings.xml'
+  MAVEN_FILE: '/home/ec2-user/maven/.m2/settings.xml'
 
 jobs:
   release:
@@ -175,7 +175,7 @@ jobs:
       - name: Maven Build
         run: |
           mvn clean install \
-            -s ${{env.MAVEN_SETTING}} \
+            -s ${{env.MAVEN_FILE}} \
             --batch-mode \
             -e \
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
@@ -221,17 +221,19 @@ jobs:
             }]
           output_file: .m2/settings.xml
 
-#      - name: Deploy To Nexus
-#        run: |
-#          mvn -X deploy \
-#            --batch-mode \
-#            -e \
-#            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
-#            -DskipTests \
-#            -DskipITs \
-#            -s '/home/ec2-user/actions-runner/_work/${{github.event.repository.name}}/${{github.event.repository.name}}/.m2/settings.xml' \
-#            -DrepositoryId='maven-releases' \
-#            -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
+      - name: Deploy To Nexus
+        run: |
+          mvn deploy \
+            --batch-mode \
+            -e \
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+            -DskipTests \
+            -DskipITs \
+            -Dmaven.main.skip \
+            -Dmaven.test.skip \
+            -s '/home/ec2-user/actions-runner/_work/${{github.event.repository.name}}/${{github.event.repository.name}}/.m2/settings.xml' \
+            -DrepositoryId='maven-releases' \
+            -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
 
 
       - name: Publish To OSSRH (Maven Central Staging)
@@ -242,7 +244,9 @@ jobs:
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
             -DskipTests \
             -DskipITs \
-            -s ${{env.MAVEN_SETTING}} \
+            -Dmaven.main.skip \
+            -Dmaven.test.skip \
+            -s ${{env.MAVEN_FILE}} \
             -DrepositoryId='maven-releases' \
             -DrepositoryIdOSSRH='true' \
             -PstageOSSRH -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
