--- a/.github/workflows/release-copy.yml
+++ b/.github/workflows/release-copy.yml
@@ -19,9 +19,9 @@ env:
 
 jobs:
   release:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     outputs:
-      NEXT_SNAPSHOT_VERSION: ${{env.NEW_DEV_VERSION}}
+      NEXT_IKM_RELEASE_VERSION: ${{env.NEW_DEV_VERSION}}
       RELEASE_VERSION: ${{env.RELEASE_VERSION}}
     steps:
       - name: Verify Branch
@@ -73,13 +73,144 @@ jobs:
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV
           echo "NEW_DEV_VERSION=$NEW_DEV_VERSION" >> $GITHUB_ENV
 
-  call_release_workflow_with_custom_inputs:
-    name: Call Reusable Workflow With Inputs
+  set_build_and_tag_release:
+    name: Set, Build, Tag Release Version & Set Next Version
+    runs-on: self-hosted
     needs: release
-    uses: ikmdev/github_actions_test/.github/workflows/reusable_release_wf.yaml@main
+    outputs:
+      NEXT_IKM_RELEASE_VERSION: ${{needs.release.outputs.NEXT_IKM_RELEASE_VERSION}}
+      RELEASE_VERSION: ${{needs.release.outputs.RELEASE_VERSION}}
+    permissions:
+      contents: write
+
+    steps:
+      - name: Checkout Code Repository
+        uses: actions/checkout@v4
+        with:
+          token: ${{secrets.IKMDEVOPS_PAT_TOKEN}}
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '21'
+
+      - name: Set Release Version
+        run: |
+          mvn -B versions:set \
+          -s ${{env.MAVEN_SETTING}} \
+          -DnewVersion=${{needs.release.outputs.RELEASE_VERSION}} \
+          -DgenerateBackupPoms=false
+
+      - name: Build Release Version
+        run: |
+           mvn -version
+           mvn clean install \
+                -s ${{env.MAVEN_SETTING}} \
+                --batch-mode \
+                -e \
+                -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+                -PcodeQuality,release-enforcement
+
+      - name: Create tag
+        run: |
+              git remote set-url origin https://git:${{secrets.IKMDEVOPS_PAT_TOKEN}}@github.com/${{github.repository}}.git
+              git pull -p
+              git add .
+              git config user.name "ikmdevops"
+              git config user.email ${{vars.IKMDEVOPS_EMAIL}}
+              git commit -m 'Release ${{needs.release.outputs.RELEASE_VERSION}}'
+              git tag -a ${{needs.release.outputs.RELEASE_VERSION}} -m '${{needs.release.outputs.RELEASE_VERSION}}' --force
+
+
+      - name: Set IKM Release Version
+        run: |
+          mvn -B versions:set \
+          -DnewVersion=${{needs.release.outputs.NEXT_IKM_RELEASE_VERSION}} \
+          -DgenerateBackupPoms=false
+
+
+      - name: Commit & Push
+        run: |
+           git add .
+           git commit -m 'Set next dev version to ${{needs.release.outputs.NEXT_IKM_RELEASE_VERSION}}'
+           git push origin HEAD:${{env.TRUNK_BRANCH_NAME}}
+           git push --tags origin
+
+  # Creating a release
+  create_release:
+    name: Create Release
     permissions: write-all
-    secrets: inherit
-    with:
-              snapshot_version: ${{needs.release.outputs.NEXT_SNAPSHOT_VERSION}}
-              release_version: ${{needs.release.outputs.RELEASE_VERSION}}
-              release_message: ${{github.event.inputs.release_message}}  
+    outputs:
+      RELEASE_VERSION: ${{needs.set_build_and_tag_release.outputs.RELEASE_VERSION}}
+    needs:
+      - set_build_and_tag_release
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Modify Release Message
+        if: inputs.release_message == ''
+        run: echo "RELEASE_MESSAGE=Release ${{needs.set_build_and_tag_release.outputs.RELEASE_VERSION}}" >> $GITHUB_ENV
+
+      - name: Create Release
+        id: create_release
+        run: |
+          curl -L \
+           -X POST \
+           -H "Accept: application/vnd.github+json" \
+           -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+           -H "X-GitHub-Api-Version: 2022-11-28" \
+           https://api.github.com/repos/${{github.repository}}/releases \
+          -d '{"tag_name":"${{needs.set_build_and_tag_release.outputs.RELEASE_VERSION}}","name":"${{needs.set_build_and_tag_release.outputs.RELEASE_VERSION}}","body":"${{env.RELEASE_MESSAGE}}","draft":false,"prerelease":false,"generate_release_notes":false}'
+
+
+  publish-artifacts:
+    name: Publishing Artifacts to Nexus & OSSRH
+    runs-on: self-hosted
+    needs:
+        - create_release
+    steps:
+          - name: Checkout Code Repository
+            uses: actions/checkout@v4
+            with:
+                ref: ${{needs.create_release.outputs.RELEASE_VERSION}}
+
+          - name: Maven Build
+            run: |
+              mvn clean install \
+                -s ${{env.MAVEN_SETTING}} \
+                --batch-mode \
+                -e \
+                -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+                -PcodeQuality
+
+          - name: Deploy To Nexus
+            run: |
+              mvn deploy \
+                    --batch-mode \
+                    -e \
+                    -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+                    -DskipTests \
+                    -DskipITs \
+                    -s ${{env.MAVEN_SETTING}} \
+                    -DrepositoryId='maven-releases' \
+                    -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
+      
+      
+          - name: Publish To OSSRH (Maven Central Staging)
+            run: |
+                mvn deploy \
+                    --batch-mode \
+                    -e \
+                    -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
+                    -DskipTests \
+                    -DskipITs \
+                    -s ${{env.MAVEN_SETTING}} \
+                    -DrepositoryId='maven-releases' \
+                    -DrepositoryIdOSSRH='true' \
+                    -PstageOSSRH -Dgpg.passphrase=${{secrets.SELF_HOSTED_GPG_PASSPHRASE}}
+  
