--- a/.github/workflows/release-copy.yml
+++ b/.github/workflows/release-copy.yml
@@ -15,7 +15,7 @@ env:
   BRANCH_NAME: ${{github.ref_name}}
   TRUNK_BRANCH_NAME: master
   RELEASE_MESSAGE: ${{github.event.inputs.release_message}}
-  MAVEN_FILE: '/home/ec2-user/maven/.m2/settings.xml'
+  MAVEN_SETTING: '/home/ec2-user/maven/.m2/settings.xml'
 
 jobs:
   release:
