--- a/.github/workflows/release-copy.yml
+++ b/.github/workflows/release-copy.yml
@@ -99,6 +99,13 @@ jobs:
                 -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn \
                 -PcodeQuality,release-enforcement
 
+      - name: Create Tag
+        run: |
+          git remote set-url origin https://git:${{secrets.IKMDEVOPS_PAT_TOKEN}}@github.com/${{github.repository}}.git
+          git pull -p
+          git config user.name "ikmdevops"
+          git config user.email ${{vars.IKMDEVOPS_EMAIL}}
+          git tag -a ${{needs.release.outputs.RELEASE_VERSION}} -m '${{needs.release.outputs.RELEASE_VERSION}}' --force
 
       - name: Set IKM Release Version
         run: |
@@ -106,15 +113,10 @@ jobs:
           -DnewVersion=${{needs.release.outputs.NEXT_IKM_RELEASE_VERSION}} \
           -DgenerateBackupPoms=false
 
-      - name: Create tag, Commit & Push
+      - name: Commit & Push
         run: |
-              git remote set-url origin https://git:${{secrets.IKMDEVOPS_PAT_TOKEN}}@github.com/${{github.repository}}.git
-              git pull -p
               git add .
-              git config user.name "ikmdevops"
-              git config user.email ${{vars.IKMDEVOPS_EMAIL}}
               git commit -m 'Set next ikm release version to ${{needs.release.outputs.NEXT_IKM_RELEASE_VERSION}}'
-              git tag -a ${{needs.release.outputs.RELEASE_VERSION}} -m '${{needs.release.outputs.RELEASE_VERSION}}' --force
               git push origin HEAD:${{env.TRUNK_BRANCH_NAME}}
               git push --tags origin
 
