--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,23 @@
   <description>Proof Utility Parent</description>
   <url>https://www.ikm.dev</url>
   <inceptionYear>2023</inceptionYear>
+  <scm>
+    <url>http://www.github.com/ikmdev/puli_test</url>
+  </scm>
   <organization>
     <name>Integrated Knowledge Management</name>
     <url>https://www.ikm.dev</url>
   </organization>
+  <developers>
+    <!-- OSSRH Related Developer (Start) -->
+    <developer>
+      <id>ikmdev</id>
+      <name>IKM Development Team</name>
+      <email>support@ikm.dev</email>
+    </developer>
+    <!-- OSSRH Related Developer (End) -->
+
+  </developers>
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
