--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           exit 1
 
       - name: Release IKMDEV Code
-        uses: ikmdev/puli/.github/workflows/reuse.yaml@master
+        uses: ikmdev/puli/.github/workflows/reuse.yaml/composite-action
         with:
           ikmdevops_pat: ${{secrets.IKMDEVOPS_PAT_TOKEN}}
           github_token: ${{secrets.GITHUB_TOKEN}}
